anwe-runtime/crates/anwe-parser/src/parser.rs
// ─────────────────────────────────────────────────────────────
// ANWE v0.1 — PARSER
//
// Recursive descent parser for the Anwe language.
// Transforms a token stream into an AST.
//
// Hand-written for clarity and error quality.
// Anwe error messages should guide, not blame —
// like pending guides the agent.
// ─────────────────────────────────────────────────────────────

use crate::ast::*;
use crate::token::{Span, Token, TokenKind};

/// Parse error with guidance.
#[derive(Debug, Clone)]
pub struct ParseError {
    pub message: String,
    pub span: Span,
    /// Guidance: what the parser thinks you meant to write.
    /// Like pending guidance — what to do next.
    pub guidance: Option<String>,
}

impl std::fmt::Display for ParseError {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "Parse error at {}: {}", self.span, self.message)?;
        if let Some(ref guidance) = self.guidance {
            write!(f, "\n  guidance: {}", guidance)?;
        }
        Ok(())
    }
}

impl std::error::Error for ParseError {}

/// The Anwe parser.
pub struct Parser {
    tokens: Vec<Token>,
    pos: usize,
}

impl Parser {
    /// Create a parser from a token stream.
    pub fn new(tokens: Vec<Token>) -> Self {
        Parser { tokens, pos: 0 }
    }

    /// Parse the entire program.
    pub fn parse_program(&mut self) -> Result<Program, ParseError> {
        let start_span = self.current_span();
        let mut declarations = Vec::new();

        while !self.is_at_end() {
            declarations.push(self.parse_declaration()?);
        }

        Ok(Program {
            declarations,
            span: start_span,
        })
    }

    /// Parse a top-level declaration.
    fn parse_declaration(&mut self) -> Result<Declaration, ParseError> {
        match self.current_kind() {
            TokenKind::KwAgent => Ok(Declaration::Agent(self.parse_agent_decl()?)),
            TokenKind::KwLink => Ok(Declaration::Link(self.parse_link_decl()?)),
            TokenKind::KwPattern => Ok(Declaration::Pattern(self.parse_pattern_decl()?)),
            TokenKind::KwHistory => Ok(Declaration::HistoryView(self.parse_history_view()?)),
            TokenKind::KwSupervise => Ok(Declaration::Supervise(self.parse_supervise_decl()?)),
            TokenKind::KwImport => Ok(Declaration::Import(self.parse_import_decl()?)),
            TokenKind::KwMind => Ok(Declaration::Mind(self.parse_mind_decl()?)),
            TokenKind::KwLet => Ok(Declaration::Let(self.parse_let_binding()?)),
            TokenKind::KwFn => Ok(Declaration::Fn(self.parse_fn_decl()?)),
            TokenKind::KwRecord => Ok(Declaration::Record(self.parse_record_decl()?)),
            TokenKind::KwWhile => Ok(Declaration::TopLevelExpr(self.parse_while_expr()?)),
            TokenKind::KwFor => Ok(Declaration::TopLevelExpr(self.parse_for_in_expr()?)),
            // Top-level assignment: name = expr
            TokenKind::Ident(_) if self.peek_is(TokenKind::Assign) => {
                let name = self.expect_ident()?;
                self.expect(TokenKind::Assign)?;
                let value = self.parse_expr()?;
                Ok(Declaration::Assign { name, value })
            }
            _ => Err(self.error(
                format!("Expected 'agent', 'link', 'mind', 'let', 'fn', 'record', 'pattern', 'supervise', 'import', 'while', 'for', or identifier assignment, found {:?}", self.current_kind()),
                Some("An Anwe program is made of agent declarations, link declarations, mind declarations, let/fn/record bindings, patterns, imports, and supervision trees.".into()),
            )),
        }
    }

    // ─── AGENT ───────────────────────────────

    fn parse_agent_decl(&mut self) -> Result<AgentDecl, ParseError> {
        let span = self.current_span();
        self.expect(TokenKind::KwAgent)?;
        let name = self.expect_ident()?;

        // Optional: attention budget
        let attention = if self.check(TokenKind::KwAttention) {
            self.advance();
            Some(self.expect_number()?)
        } else {
            None
        };

        // Optional: external/bridge source — bridge to outside participant
        // Syntax: external("kind", "address") or bridge("kind", "address")
        let external = if self.check(TokenKind::KwExternal) || self.check(TokenKind::KwBridge) {
            let ext_span = self.current_span();
            self.advance();
            self.expect(TokenKind::LParen)?;
            let kind = self.expect_string()?;
            self.expect(TokenKind::Comma)?;
            let address = self.expect_string()?;
            self.expect(TokenKind::RParen)?;
            Some(ExternalSource { kind, address, span: ext_span })
        } else {
            None
        };

        let mut data = Vec::new();
        if self.check(TokenKind::KwData) {
            self.advance();
            self.expect(TokenKind::LBrace)?;
            while !self.check(TokenKind::RBrace) && !self.is_at_end() {
                data.push(self.parse_key_value()?);
            }
            self.expect(TokenKind::RBrace)?;
        }

        Ok(AgentDecl { name, attention, data, external, span })
    }

    // ─── LINK ───────────────────────────────────

    fn parse_link_decl(&mut self) -> Result<LinkDecl, ParseError> {
        let span = self.current_span();
        self.expect(TokenKind::KwLink)?;
        let agent_a = self.parse_dotted_name()?;
        self.expect(TokenKind::BiDir)?;
        let agent_b = self.parse_dotted_name()?;

        // Optional: priority level
        let priority = if self.check(TokenKind::KwPriority) {
            self.advance();
            Some(self.parse_link_priority()?)
        } else {
            self.try_parse_link_priority()
        };

        // Optional: schedule modifier (every N ticks, after N ticks, continuous)
        let schedule = if self.check(TokenKind::KwEvery) {
            self.advance();
            let ticks = self.expect_number()?;
            self.expect(TokenKind::KwTicks)?;
            Some(LinkSchedule::Every { ticks })
        } else if self.check(TokenKind::KwAfter) {
            self.advance();
            let ticks = self.expect_number()?;
            self.expect(TokenKind::KwTicks)?;
            Some(LinkSchedule::After { ticks })
        } else if self.check(TokenKind::KwContinuous) {
            self.advance();
            Some(LinkSchedule::Continuous)
        } else {
            None
        };

        // Optional: on_failure_of <agent>
        let on_failure_of = if self.check(TokenKind::KwOnFailureOf) {
            self.advance();
            Some(self.parse_dotted_name()?)
        } else {
            None
        };

        self.expect(TokenKind::LBrace)?;

        let mut body = Vec::new();
        while !self.check(TokenKind::RBrace) && !self.is_at_end() {
            body.push(self.parse_link_expr()?);
        }
        self.expect(TokenKind::RBrace)?;

        Ok(LinkDecl { agent_a, agent_b, priority, schedule, on_failure_of, body, span })
    }

    /// Parse a dotted name like "Safety.InputFilter" or plain "Agent".
    fn parse_dotted_name(&mut self) -> Result<String, ParseError> {
        let mut name = self.expect_ident()?;
        while self.check(TokenKind::Dot) {
            self.advance();
            let part = self.expect_ident()?;
            name = format!("{}.{}", name, part);
        }
        Ok(name)
    }

    fn parse_link_priority(&mut self) -> Result<LinkPriority, ParseError> {
        match self.current_kind() {
            TokenKind::PriCritical => { self.advance(); Ok(LinkPriority::Critical) }
            TokenKind::PriHigh => { self.advance(); Ok(LinkPriority::High) }
            TokenKind::PriNormal => { self.advance(); Ok(LinkPriority::Normal) }
            TokenKind::PriLow => { self.advance(); Ok(LinkPriority::Low) }
            TokenKind::PriBackground => { self.advance(); Ok(LinkPriority::Background) }
            _ => Err(self.error(
                "Expected priority level: critical, high, normal, low, background".into(),
                None,
            )),
        }
    }

    fn try_parse_link_priority(&mut self) -> Option<LinkPriority> {
        match self.current_kind() {
            TokenKind::PriCritical => { self.advance(); Some(LinkPriority::Critical) }
            TokenKind::PriHigh => { self.advance(); Some(LinkPriority::High) }
            TokenKind::PriNormal => { self.advance(); Some(LinkPriority::Normal) }
            TokenKind::PriLow => { self.advance(); Some(LinkPriority::Low) }
            TokenKind::PriBackground => { self.advance(); Some(LinkPriority::Background) }
            _ => None,
        }
    }

    /// Parse a link body expression.
    fn parse_link_expr(&mut self) -> Result<LinkExpr, ParseError> {
        match self.current_kind() {
            TokenKind::Alert => Ok(LinkExpr::Alert(self.parse_alert()?)),
            TokenKind::KwConnect => Ok(LinkExpr::Connect(self.parse_connect()?)),
            TokenKind::Apply => Ok(LinkExpr::Apply(self.parse_apply()?)),
            TokenKind::Commit => Ok(LinkExpr::Commit(self.parse_commit()?)),
            TokenKind::KwConverge => {
                // Disambiguate: converge [agents] vs converge A <<>> B
                if self.peek_is(TokenKind::LBracket) {
                    Ok(LinkExpr::MultiConverge(self.parse_multi_converge()?))
                } else {
                    Ok(LinkExpr::Converge(self.parse_converge()?))
                }
            }
            TokenKind::KwEmit => Ok(LinkExpr::Emit(self.parse_emit()?)),
            TokenKind::KwWhen => Ok(LinkExpr::When(self.parse_when()?)),
            TokenKind::KwPending => Ok(LinkExpr::PendingHandler(self.parse_pending_handler()?)),
            TokenKind::PatternFlow => Ok(LinkExpr::PatternUse(self.parse_pattern_use()?)),
            // Let binding: let name = expr
            TokenKind::KwLet => Ok(LinkExpr::Let(self.parse_let_binding()?)),
            // Sync starts with an identifier (agent name) followed by ~ (possibly after dots)
            TokenKind::Ident(_) if self.is_sync_ahead() => {
                Ok(LinkExpr::Sync(self.parse_sync()?))
            }
            // Assignment: name = expr (mutable rebinding)
            TokenKind::Ident(_) if self.peek_is(TokenKind::Assign) => {
                Ok(LinkExpr::Assign(self.parse_assign()?))
            }
            // Reject: <= when ...
            TokenKind::LessEq => Ok(LinkExpr::Reject(self.parse_reject()?)),
            // Each: each <var> in <expr> { ... }
            TokenKind::KwEach => Ok(LinkExpr::Each(self.parse_each()?)),
            // If/else: if <condition> { ... } [else { ... }]
            TokenKind::KwIf => Ok(LinkExpr::IfElse(self.parse_if_else()?)),
            // Phase 6-9 extensions
            TokenKind::KwSpawn => Ok(LinkExpr::Spawn(self.parse_spawn()?)),
            TokenKind::KwRetire => Ok(LinkExpr::Retire(self.parse_retire()?)),
            TokenKind::KwSyncAll => Ok(LinkExpr::SyncAll(self.parse_sync_all()?)),
            TokenKind::KwBroadcast => Ok(LinkExpr::Broadcast(self.parse_broadcast()?)),
            TokenKind::KwStream => Ok(LinkExpr::Stream(self.parse_stream()?)),
            TokenKind::KwSave => Ok(LinkExpr::Save(self.parse_save()?)),
            TokenKind::KwRestore => Ok(LinkExpr::Restore(self.parse_restore()?)),
            TokenKind::KwHistoryQuery => Ok(LinkExpr::HistoryQueryBlock(self.parse_history_query()?)),
            TokenKind::KwAlign => Ok(LinkExpr::Align(self.parse_align()?)),
            TokenKind::KwBuffer => Ok(LinkExpr::Buffer(self.parse_buffer()?)),
            // First-person cognition primitives
            TokenKind::KwThink => Ok(LinkExpr::Think(self.parse_think()?)),
            TokenKind::KwExpress => Ok(LinkExpr::Express(self.parse_express()?)),
            TokenKind::KwSense => Ok(LinkExpr::Sense(self.parse_sense()?)),
            TokenKind::KwAuthor => Ok(LinkExpr::Author(self.parse_author()?)),
            // While loop: while <condition> { ... }
            TokenKind::KwWhile => Ok(LinkExpr::While(self.parse_while()?)),
            // Error handling: attempt { ... } recover { ... }
            TokenKind::KwAttempt => Ok(LinkExpr::Attempt(self.parse_attempt()?)),
            _ => Err(self.error(
                format!("Expected a link expression (>>, connect, =>, *, <=, let, think, express, sense, author, each, if, while, attempt, etc.), found {:?}", self.current_kind()),
                Some("Inside a link or attend block, you can use: >> (alert), connect, ~ (sync), => (apply), * (commit), <= (reject), converge, when, pending?, ~> (pattern), each, if, while, attempt, think, express, sense, author, let, spawn, retire, sync_all, broadcast, stream, save, restore, history_query, align, buffer.".into()),
            )),
        }
    }

    // ─── ALERT ────────────────────────────────

    fn parse_alert(&mut self) -> Result<AlertExpr, ParseError> {
        let span = self.current_span();
        self.expect(TokenKind::Alert)?; // >>

        let attrs = if self.check(TokenKind::LBrace) {
            Some(self.parse_signal_attrs()?)
        } else {
            None
        };

        let expression = self.parse_expr()?;

        Ok(AlertExpr { attrs, expression, span })
    }

    // ─── CONNECT ─────────────────────────────────

    fn parse_connect(&mut self) -> Result<ConnectBlock, ParseError> {
        let span = self.current_span();
        self.expect(TokenKind::KwConnect)?;

        let depth = if self.check(TokenKind::KwDepth) {
            self.advance();
            Some(self.parse_depth_level()?)
        } else if self.is_depth_level() {
            // Allow "connect deep {" shorthand
            Some(self.parse_depth_level()?)
        } else {
            None
        };

        self.expect(TokenKind::LBrace)?;

        let mut pulses = Vec::new();
        while !self.check(TokenKind::RBrace) && !self.is_at_end() {
            pulses.push(self.parse_signal_expr()?);
        }
        self.expect(TokenKind::RBrace)?;

        Ok(ConnectBlock { depth, pulses, span })
    }

    fn parse_signal_expr(&mut self) -> Result<SignalExpr, ParseError> {
        let span = self.current_span();
        self.expect(TokenKind::KwSignal)?;

        let quality = self.parse_signal_quality()?;
        let priority = self.expect_number()?;
        let direction = self.parse_signal_direction()?;

        let data = if self.check(TokenKind::KwData) {
            self.advance();
            Some(self.parse_expr()?)
        } else {
            None
        };

        let mut trace = Vec::new();
        if self.check(TokenKind::KwTrace) {
            self.advance();
            self.expect(TokenKind::LBrace)?;
            while !self.check(TokenKind::RBrace) && !self.is_at_end() {
                trace.push(self.parse_key_value()?);
            }
            self.expect(TokenKind::RBrace)?;
        }

        Ok(SignalExpr { quality, priority, direction, data, trace, span })
    }

    // ─── SYNC ─────────────────────────────────

    fn parse_sync(&mut self) -> Result<SyncExpr, ParseError> {
        let span = self.current_span();
        let agent_a = self.parse_dotted_name()?;
        self.expect(TokenKind::Sync)?; // ~
        let agent_b = self.parse_dotted_name()?;
        self.expect(TokenKind::KwUntil)?;
        let until = self.parse_sync_condition()?;

        // Optional: decay half-life
        let decay = if self.check(TokenKind::KwDecay) {
            self.advance();
            Some(self.expect_number()? as u32)
        } else {
            None
        };

        // Optional: timeout N { ... }
        let timeout = if self.check(TokenKind::KwTimeout) {
            let timeout_span = self.current_span();
            self.advance();
            let timeout_ticks = self.expect_number()?;
            let mut options = Vec::new();
            if self.check(TokenKind::LBrace) {
                self.advance();
                while !self.check(TokenKind::RBrace) && !self.is_at_end() {
                    options.push(self.parse_key_value()?);
                }
                self.expect(TokenKind::RBrace)?;
            }
            Some(SyncTimeout { timeout_ticks, options, span: timeout_span })
        } else {
            None
        };

        Ok(SyncExpr { agent_a, agent_b, until, decay, timeout, span })
    }

    fn parse_sync_condition(&mut self) -> Result<SyncCondition, ParseError> {
        match self.current_kind() {
            TokenKind::SyncSynchronized => {
                self.advance();
                Ok(SyncCondition::Synchronized)
            }
            TokenKind::SyncResonating => {
                self.advance();
                Ok(SyncCondition::Resonating)
            }
            TokenKind::KwSyncLevel => {
                self.advance();
                let op = self.parse_comparison_op()?;
                let value = self.expect_number()?;
                Ok(SyncCondition::CoherenceThreshold { op, value })
            }
            _ => Err(self.error(
                "Expected sync condition: 'synchronized', 'resonating', or 'sync_level > N'".into(),
                None,
            )),
        }
    }

    // ─── APPLY ───────────────────────────────

    fn parse_apply(&mut self) -> Result<ApplyExpr, ParseError> {
        let span = self.current_span();
        self.expect(TokenKind::Apply)?; // =>
        self.expect(TokenKind::KwWhen)?;
        let condition = self.parse_condition()?;

        let depth = if self.check(TokenKind::KwDepth) {
            self.advance();
            Some(self.parse_depth_level()?)
        } else if self.is_depth_level() {
            Some(self.parse_depth_level()?)
        } else {
            None
        };

        let mut changes = Vec::new();
        if self.check(TokenKind::LBrace) {
            self.advance();
            while !self.check(TokenKind::RBrace) && !self.is_at_end() {
                changes.push(self.parse_structural_change()?);
            }
            self.expect(TokenKind::RBrace)?;
        }

        Ok(ApplyExpr { condition, depth, changes, span })
    }

    fn parse_structural_change(&mut self) -> Result<StructuralChange, ParseError> {
        let span = self.current_span();
        let name = self.expect_ident()?;
        self.expect(TokenKind::StructChange)?; // <-
        let value = self.parse_expr()?;
        Ok(StructuralChange { name, value, span })
    }

    // ─── COMMIT ──────────────────────────────

    fn parse_commit(&mut self) -> Result<CommitExpr, ParseError> {
        let span = self.current_span();
        self.expect(TokenKind::Commit)?; // *
        self.expect(TokenKind::KwFrom)?;

        let source = match self.current_kind() {
            TokenKind::KwApply => { self.advance(); CommitSource::Apply }
            TokenKind::KwReject => { self.advance(); CommitSource::Reject }
            _ => return Err(self.error(
                "Expected 'apply' or 'reject' after '* from'".into(),
                Some("Commit always follows apply or reject. Always.".into()),
            )),
        };

        let mut entries = Vec::new();
        if self.check(TokenKind::LBrace) {
            self.advance();
            while !self.check(TokenKind::RBrace) && !self.is_at_end() {
                entries.push(self.parse_key_value()?);
            }
            self.expect(TokenKind::RBrace)?;
        }

        Ok(CommitExpr { source, entries, span })
    }

    // ─── REJECT ───────────────────────────────

    fn parse_reject(&mut self) -> Result<RejectExpr, ParseError> {
        let span = self.current_span();
        self.expect(TokenKind::LessEq)?; // <=
        self.expect(TokenKind::KwWhen)?;
        let condition = self.parse_condition()?;

        let data = if self.check(TokenKind::KwData) {
            self.advance();
            Some(self.parse_expr()?)
        } else {
            None
        };

        Ok(RejectExpr { condition, data, span })
    }

    // ─── CONVERGE ──────────────────────────────

    fn parse_converge(&mut self) -> Result<ConvergeBlock, ParseError> {
        let span = self.current_span();
        self.expect(TokenKind::KwConverge)?;
        let agent_a = self.expect_ident()?;
        self.expect(TokenKind::Converge)?; // <<>>
        let agent_b = self.expect_ident()?;
        self.expect(TokenKind::LBrace)?;

        let mut body = Vec::new();
        while !self.check(TokenKind::RBrace) && !self.is_at_end() {
            body.push(self.parse_link_expr()?);
        }
        self.expect(TokenKind::RBrace)?;

        Ok(ConvergeBlock { agent_a, agent_b, body, span })
    }

    // ─── EMIT ────────────────────────────────

    fn parse_emit(&mut self) -> Result<EmitExpr, ParseError> {
        let span = self.current_span();
        self.expect(TokenKind::KwEmit)?;
        let attrs = self.parse_signal_attrs()?;
        let expression = self.parse_expr()?;
        Ok(EmitExpr { attrs, expression, span })
    }

    // ─── WHEN ────────────────────────────────

    fn parse_when(&mut self) -> Result<WhenExpr, ParseError> {
        let span = self.current_span();
        self.expect(TokenKind::KwWhen)?;
        let condition = self.parse_condition()?;
        self.expect(TokenKind::LBrace)?;

        let mut body = Vec::new();
        while !self.check(TokenKind::RBrace) && !self.is_at_end() {
            body.push(self.parse_link_expr()?);
        }
        self.expect(TokenKind::RBrace)?;

        Ok(WhenExpr { condition, body, span })
    }

    // ─── EACH (ITERATION) ────────────────────

    fn parse_each(&mut self) -> Result<EachExpr, ParseError> {
        let span = self.current_span();
        self.expect(TokenKind::KwEach)?;
        let var = self.expect_ident()?;
        self.expect(TokenKind::KwIn)?;
        let collection = self.parse_expr()?;
        self.expect(TokenKind::LBrace)?;

        let mut body = Vec::new();
        while !self.check(TokenKind::RBrace) && !self.is_at_end() {
            body.push(self.parse_link_expr()?);
        }
        self.expect(TokenKind::RBrace)?;

        Ok(EachExpr { var, collection, body, span })
    }

    // ─── IF/ELSE (CONDITIONAL ROUTING) ──────

    fn parse_if_else(&mut self) -> Result<IfElseExpr, ParseError> {
        let span = self.current_span();
        self.expect(TokenKind::KwIf)?;
        let condition = self.parse_condition()?;
        self.expect(TokenKind::LBrace)?;

        let mut then_body = Vec::new();
        while !self.check(TokenKind::RBrace) && !self.is_at_end() {
            then_body.push(self.parse_link_expr()?);
        }
        self.expect(TokenKind::RBrace)?;

        let mut else_body = Vec::new();
        if self.check(TokenKind::KwElse) {
            self.advance();
            self.expect(TokenKind::LBrace)?;
            while !self.check(TokenKind::RBrace) && !self.is_at_end() {
                else_body.push(self.parse_link_expr()?);
            }
            self.expect(TokenKind::RBrace)?;
        }

        Ok(IfElseExpr { condition, then_body, else_body, span })
    }

    // ─── WHILE ──────────────────────────────
    //
    // while <condition> { <link_expr>* }

    fn parse_while(&mut self) -> Result<WhileExpr, ParseError> {
        let span = self.current_span();
        self.expect(TokenKind::KwWhile)?;
        let condition = self.parse_condition()?;
        self.expect(TokenKind::LBrace)?;

        let mut body = Vec::new();
        while !self.check(TokenKind::RBrace) && !self.is_at_end() {
            body.push(self.parse_link_expr()?);
        }
        self.expect(TokenKind::RBrace)?;

        Ok(WhileExpr { condition, body, span })
    }

    // ─── ATTEMPT / RECOVER ──────────────────
    //
    // attempt { <link_expr>* } recover { <link_expr>* }

    fn parse_attempt(&mut self) -> Result<AttemptExpr, ParseError> {
        let span = self.current_span();
        self.expect(TokenKind::KwAttempt)?;
        self.expect(TokenKind::LBrace)?;

        let mut body = Vec::new();
        while !self.check(TokenKind::RBrace) && !self.is_at_end() {
            body.push(self.parse_link_expr()?);
        }
        self.expect(TokenKind::RBrace)?;

        self.expect(TokenKind::KwRecover)?;
        self.expect(TokenKind::LBrace)?;

        let mut recover = Vec::new();
        while !self.check(TokenKind::RBrace) && !self.is_at_end() {
            recover.push(self.parse_link_expr()?);
        }
        self.expect(TokenKind::RBrace)?;

        Ok(AttemptExpr { body, recover, span })
    }

    // ─── IMPORT ──────────────────────────────

    fn parse_import_decl(&mut self) -> Result<ImportDecl, ParseError> {
        let span = self.current_span();
        self.expect(TokenKind::KwImport)?;
        let module_path = self.expect_string()?;
        self.expect(TokenKind::KwAs)?;
        let alias = self.expect_ident()?;
        self.expect(TokenKind::LBrace)?;
        let mut entries = Vec::new();
        while !self.check(TokenKind::RBrace) && !self.is_at_end() {
            entries.push(self.parse_key_value()?);
        }
        self.expect(TokenKind::RBrace)?;
        Ok(ImportDecl { module_path, alias, entries, span })
    }

    // ═══════════════════════════════════════════
    // FIRST-PERSON COGNITION
    // The language AI builds in.
    // ═══════════════════════════════════════════

    // ─── MIND ───────────────────────────────
    //
    // mind <name> [data { ... }] {
    //   attend "label" [priority <N>] { ... }
    //   attend "label" [priority <N>] { ... }
    // }

    fn parse_mind_decl(&mut self) -> Result<MindDecl, ParseError> {
        let span = self.current_span();
        self.expect(TokenKind::KwMind)?;
        let name = self.expect_ident()?;

        // Optional: attention budget
        let attention = if self.check(TokenKind::KwAttention) {
            self.advance();
            Some(self.expect_number()?)
        } else {
            None
        };

        // Optional: data block
        let mut data = Vec::new();
        if self.check(TokenKind::KwData) {
            self.advance();
            self.expect(TokenKind::LBrace)?;
            while !self.check(TokenKind::RBrace) && !self.is_at_end() {
                data.push(self.parse_key_value()?);
            }
            self.expect(TokenKind::RBrace)?;
        }

        // Mind body: attend blocks
        self.expect(TokenKind::LBrace)?;
        let mut attend_blocks = Vec::new();
        while !self.check(TokenKind::RBrace) && !self.is_at_end() {
            attend_blocks.push(self.parse_attend()?);
        }
        self.expect(TokenKind::RBrace)?;

        Ok(MindDecl { name, attention, data, attend_blocks, span })
    }
